Added count matrix and acces to count

--- a/P2/AssignmentCode.ipynb
+++ b/P2/AssignmentCode.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "[1384617 rows x 6 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,19 @@
     "    :param df: DataFrame original després de creuar-lo\n",
     "    :return: DataFrame descrit adalt\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError()\n",
+    "    \n",
+    "    data_frame = pd.DataFrame(\n",
+    "        data=df_merged.groupby(['user_id', 'aisle_id']).size(),\n",
+    "        columns=['count']\n",
+    "        \n",
+    "    )\n",
+    "    \n",
+    "    return data_frame.pivot_table(\n",
+    "        'count', \n",
+    "        'user_id', \n",
+    "        'aisle_id',\n",
+    "        fill_value=0\n",
+    "    )\n",
     "\n",
     "def get_count(df, user_id, aisle_id):\n",
     "    \"\"\"\n",
@@ -351,14 +363,35 @@
     "    :param aisle_id: ID de la secció\n",
     "    :return: Enter amb el nombre de vegades que ha comprat\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError()"
+    "    return df.loc[user_id][aisle_id]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aisle_id\n",
+      "1      0\n",
+      "2      0\n",
+      "3      0\n",
+      "4      0\n",
+      "5      2\n",
+      "      ..\n",
+      "130    0\n",
+      "131    0\n",
+      "132    0\n",
+      "133    0\n",
+      "134    0\n",
+      "Name: 14, Length: 134, dtype: int64\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "df_counts = build_counts_table(df_merged)\n",
     "count = get_count(df_counts, 14, 5)\n",
