--- a/P1/P1-Exercicis.ipynb
+++ b/P1/P1-Exercicis.ipynb
@@ -9,25 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
     }
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-999fad720a5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd"
@@ -51,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -72,25 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-2aa031264266>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcalcular\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(calcular(np.random.random((2, 2))))"
    ]
@@ -250,9 +226,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -270,18 +245,26 @@
     "    :param x: np.array en forma vectorial (unidimensional)\n",
     "    :return: float amb la mitja\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError()"
+    "    return np.sum(x[np.logical_not(np.isnan(x))])/x.size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.32261145760085397\n"
+     ]
+    }
+   ],
    "source": [
     "vec = np.random.random(5)\n",
     "vec[np.random.randint(0, 5)] = np.nan\n",
@@ -304,9 +287,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -325,18 +307,32 @@
     "    :param usuari2: Llista (nativa de python) amb les dades del segon usuari\n",
     "    :return: DataFrame amb les dades dels usuaris\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError()"
+    "    return pd.DataFrame(\n",
+    "        data=[usuari1, usuari2],\n",
+    "        columns=[\"Nom\", \"Cognom\", \"Data Registre\", \"Bitcoin\"],\n",
+    "        index=[\"99\", \"88\"]\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Nom  Cognom Data Registre  Bitcoin\n",
+      "99    Mike  Strong    2012-02-03     99.0\n",
+      "88  Thomas    Weak    2018-01-01      0.4\n"
+     ]
+    }
+   ],
    "source": [
     "print(crear_dataframe_1(\n",
     "    ['Mike', 'Strong', '2012-02-03', 99],\n",
@@ -346,9 +342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -378,19 +373,35 @@
     "    :param x: np.array unidimensional amb les dades per calcular potències\n",
     "    :param exponent: enter >= 0, màxim exponent a fer servir\n",
     "    :return: Un DataFrame de pandas, tal i com s'especifica\n",
-    "    \"\"\"\n",
-    "    raise NotImplementedError()"
+    "    \"\"\" \n",
+    "    \n",
+    "    \n",
+    "    return pd.DataFrame(\n",
+    "        {'x{}'.format(i) : x**i for i in range(exponent+1)}\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   x0  x1  x2  x3   x4    x5\n",
+      "0   1   1   1   1    1     1\n",
+      "1   1   2   4   8   16    32\n",
+      "2   1   3   9  27   81   243\n",
+      "3   1   4  16  64  256  1024\n"
+     ]
+    }
+   ],
    "source": [
     "print(crear_dataframe_2(np.asarray([1, 2, 3, 4]), 5))"
    ]
@@ -411,9 +422,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -430,18 +440,29 @@
     "    :return: Un pd.Series o llista/tupla de Pandas amb els noms \n",
     "        (i solament els noms) dels alumnes amb 5 o més\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError()"
+    "    \n",
+    "    return df.loc[df.Nota > 5, 'Nom']\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    Antonio\n",
+      "Name: Nom, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(consultar_basic(pd.DataFrame({\n",
     "    'Nom': ['Antonio', 'Mireia'],\n",
@@ -451,9 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
-    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -471,18 +491,27 @@
     "    :param df: DataFrame sobre el que operar, les files contenen floats o NaN\n",
     "    :return: L'índex (int, ja ve donat) de la fila amb menys NaNs\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError()"
+    "\n",
+    "    return df.count(axis=1).idxmax()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "print(consultar_dificil(pd.DataFrame([\n",
     "    [0, np.nan, 3.0, 2, np.nan],\n",
@@ -504,6 +533,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
