Done until distances

--- a/P2/AssignmentCode.ipynb
+++ b/P2/AssignmentCode.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "[1384617 rows x 6 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,26 +368,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aisle_id\n",
-      "1      0\n",
-      "2      0\n",
-      "3      0\n",
-      "4      0\n",
-      "5      2\n",
-      "      ..\n",
-      "130    0\n",
-      "131    0\n",
-      "132    0\n",
-      "133    0\n",
-      "134    0\n",
-      "Name: 14, Length: 134, dtype: int64\n",
       "2\n"
      ]
     }
@@ -400,10 +387,387 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>aisle_id</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>...</th>\n",
+       "      <th>125</th>\n",
+       "      <th>126</th>\n",
+       "      <th>127</th>\n",
+       "      <th>128</th>\n",
+       "      <th>129</th>\n",
+       "      <th>130</th>\n",
+       "      <th>131</th>\n",
+       "      <th>132</th>\n",
+       "      <th>133</th>\n",
+       "      <th>134</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206199</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206200</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206203</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206205</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206209</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>131209 rows × 134 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "aisle_id  1    2    3    4    5    6    7    8    9    10   ...  125  126  \\\n",
+       "user_id                                                     ...             \n",
+       "1           0    0    0    0    0    0    0    0    0    0  ...    0    0   \n",
+       "2           1    0    1    0    0    0    0    0    0    0  ...    0    0   \n",
+       "5           0    0    0    0    0    0    0    0    0    0  ...    0    0   \n",
+       "7           0    0    0    0    0    0    0    0    0    0  ...    0    0   \n",
+       "8           0    0    0    0    0    0    0    0    0    0  ...    0    0   \n",
+       "...       ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...   \n",
+       "206199      0    0    2    1    0    0    0    0    0    0  ...    0    0   \n",
+       "206200      0    0    0    0    0    0    0    0    0    0  ...    0    0   \n",
+       "206203      0    0    2    0    0    0    0    0    0    0  ...    0    0   \n",
+       "206205      0    0    0    0    0    0    0    0    0    0  ...    0    0   \n",
+       "206209      0    0    0    0    0    0    0    0    0    0  ...    0    0   \n",
+       "\n",
+       "aisle_id  127  128  129  130  131  132  133  134  \n",
+       "user_id                                           \n",
+       "1           0    0    0    0    0    0    0    0  \n",
+       "2           0    0    0    0    0    0    0    0  \n",
+       "5           0    0    0    0    0    0    0    0  \n",
+       "7           0    0    0    0    0    0    0    0  \n",
+       "8           0    1    0    0    0    0    0    0  \n",
+       "...       ...  ...  ...  ...  ...  ...  ...  ...  \n",
+       "206199      0    0    0    0    0    0    0    0  \n",
+       "206200      0    0    0    0    0    0    0    0  \n",
+       "206203      0    0    0    0    0    0    0    0  \n",
+       "206205      0    0    0    0    0    0    0    0  \n",
+       "206209      0    0    0    0    0    0    0    0  \n",
+       "\n",
+       "[131209 rows x 134 columns]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_counts"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -418,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +794,8 @@
     "    :param n: Quanitat d'usuaris\n",
     "    :return: Llista, tupla o pd.Series de userID dels n usuaris\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError()\n",
+    "    top = counts.sum(axis=1).nlargest(n)\n",
+    "    return top.index.values.tolist()\n",
     "\n",
     "def top_sales_aisle(counts, indexes, columns, n):\n",
     "    \"\"\"\n",
@@ -440,14 +805,24 @@
     "    :param n: Quanitat de seccions\n",
     "    :return: Llista, tupla o pd.Series de aisle_id de les n seccions\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError()"
+    "    top = counts.sum(axis=0).nlargest(n)    \n",
+    "    return top.index.values.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "top_users:  [149753, 197541, 63458, 83993, 189951]\n",
+      "top_sales:  [83, 24, 123, 120, 21]\n"
+     ]
+    }
+   ],
    "source": [
     "indexes = df_counts.index\n",
     "columns = df_counts.columns\n",
@@ -456,7 +831,7 @@
     "print('top_users: ', top_users)\n",
     "\n",
     "top_sales = top_sales_aisle(df_counts, indexes, columns, 5)\n",
-    "print('top_sales: ', top_artists)"
+    "print('top_sales: ', top_sales)"
    ]
   },
   {
@@ -475,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +927,8 @@
     "    :param y: Segon vector\n",
     "    :return : Escalar (float) corresponent a la similitud\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError()\n",
+    "    \n",
+    "    return euclid(x, y)\n",
     "\n",
     "def euclid(x, y):\n",
     "    \"\"\"\n",
@@ -562,7 +938,7 @@
     "    :param y: Segon vector\n",
     "    :return : Escalar (float) corresponent a la distància euclidiana\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError()\n",
+    "    return 1/(1+np.linalg.norm(x-y))\n",
     "\n",
     "def cosine(x, y):\n",
     "    \"\"\"\n",
@@ -572,7 +948,7 @@
     "    :param y: Segon vector\n",
     "    :return : Escalar (float) corresponent a la similitud cosinus\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError()\n",
+    "    return np.dot(x, y)/(np.linalg.norm(x) * np.linalg.norm(y))\n",
     "\n",
     "def pearson(x, y):\n",
     "    \"\"\"\n",
@@ -582,7 +958,12 @@
     "    :param y: Segon vector\n",
     "    :return : Escalar (float) corresponent a la correlació de Pearson\n",
     "    \"\"\"\n",
-    "    raise NotImplementedError()\n",
+    "    p = np.sum((x - np.mean(x)) * (y - np.mean(y)))\n",
+    "    q = np.linalg.norm(x-np.mean(x))*np.linalg.norm(y-np.mean(y))\n",
+    "    \n",
+    "    if (q == 0): return 0\n",
+    "    \n",
+    "    return p/q\n",
     "\n",
     "def jaccard(x, y):\n",
     "    \"\"\"\n",
@@ -597,11 +978,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3090169943749474\n",
+      "0.3090169943749474\n",
+      "0.9258200997725515\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "print(similarity(np.asarray([1, 1, 1]), np.asarray([1, 2, 3])))"
+    "print(similarity(np.asarray([1, 1, 1]), np.asarray([1, 2, 3])))\n",
+    "print(euclid(np.asarray([1, 1, 1]), np.asarray([1, 2, 3])))\n",
+    "print(cosine(np.asarray([1, 1, 1]), np.asarray([1, 2, 3])))\n",
+    "print(pearson(np.asarray([1, 1, 1]), np.asarray([1, 2, 3])))\n",
+    "# print(jaccard(np.asarray([1, 1, 1]), np.asarray([1, 2, 3])))"
    ]
   },
   {
