P4 falta lo del final

--- a/P4/P4-natural-language-assignment/P2 - Naive Bayes Classifier-assignment.ipynb
+++ b/P4/P4-natural-language-assignment/P2 - Naive Bayes Classifier-assignment.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4ce783df",
    "metadata": {},
    "outputs": [],
@@ -91,10 +91,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "67486150",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['taller', 'dels', 'nous', 'usos', 'de', 'la', 'informàtica']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def tokenize(text, lowercase=True):\n",
     "    text = text.lower() if lowercase else text\n",
@@ -126,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "c7ba12c4",
    "metadata": {},
    "outputs": [],
@@ -151,17 +162,30 @@
     "        iterable = tuple(iterable)\n",
     "    ngrams = []\n",
     "    \n",
-    "    # part a implementar per l'alumne\n",
-    "    # EL VOSTRE CODI AQUÍ\n",
+    "    for j in range(min_n, max_n + 1):\n",
+    "        for i in range(len(iterable)):\n",
+    "            if (i+j <= len(iterable)):\n",
+    "                ngrams.append(iterable[i:i+j])\n",
     "    return ngrams"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "2a414c7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Els següents tests haurien de donar `True` si ho heu implementat correctament:\n",
     "ngrams(\n",
@@ -172,6 +196,43 @@
     "    ('taller', 'de'), ('de', 'nous'), ('nous', 'usos'), \n",
     "    ('usos', 'de'), ('de', 'la'), ('la', 'informàtica')\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "533eb1ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('taller', 'de'),\n",
+       " ('de', 'nous'),\n",
+       " ('nous', 'usos'),\n",
+       " ('usos', 'de'),\n",
+       " ('de', 'la'),\n",
+       " ('la', 'informàtica'),\n",
+       " ('taller', 'de', 'nous'),\n",
+       " ('de', 'nous', 'usos'),\n",
+       " ('nous', 'usos', 'de'),\n",
+       " ('usos', 'de', 'la'),\n",
+       " ('de', 'la', 'informàtica'),\n",
+       " ('taller', 'de', 'nous', 'usos'),\n",
+       " ('de', 'nous', 'usos', 'de'),\n",
+       " ('nous', 'usos', 'de', 'la'),\n",
+       " ('usos', 'de', 'la', 'informàtica')]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ngrams(\n",
+    "    list(tokenize(\"taller de nous usos de la informàtica\")), \n",
+    "    ngram_range=(2, 4))"
    ]
   },
   {
@@ -196,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "2799b520",
    "metadata": {},
    "outputs": [],
@@ -221,22 +282,33 @@
     "        author = (os.path.basename(filename).split('-'))[0]\n",
     "        words = list(tokenize(open(filename).read()))\n",
     "    \n",
-    "        # part a implementar per l'alumne\n",
-    "        # EL VOSTRE CODI AQUÍ\n",
+    "        counter = Counter(ngrams(words, ngram_range))\n",
+    "        most_common = counter.most_common(N)\n",
+    "        X.append([ngram for (ngram, freq)in most_common])\n",
+    "        y.append(author)\n",
+    "        \n",
     "    \n",
     "    return X, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "e38adc76",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chesterton [('of', 'the'), ('in', 'the'), ('with', 'a'), ('said', 'the'), ('in', 'a'), ('to', 'the'), ('of', 'a'), ('on', 'the'), ('said', 'syme'), ('he', 'was')]\n"
+     ]
+    }
+   ],
    "source": [
-    "train_X, train_y = create_features(glob('data/gutenberg/training/*.txt'), N=10)\n",
+    "train_X, train_y = create_features(glob('data/gutenberg/training/*.txt'), N=10, ngram_range=(2,2))\n",
     "print(train_y[0], train_X[0])"
    ]
   },
@@ -346,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "5d12682c",
    "metadata": {},
    "outputs": [],
@@ -362,13 +434,13 @@
     "            X: llista de features (cada feature serà un vector de n-grames)\n",
     "            y: llista d'etiquetes (autors). L'ordre de X i de y ha de correspondre\n",
     "        \"\"\"\n",
-    "        self.C = Counter(y)\n",
-    "        self.N = defaultdict(Counter)\n",
+    "        self.C = Counter(y) # Autor: num_llibres\n",
+    "        self.N = defaultdict(Counter) #Defaultdic de Counter\n",
     "        for x, y_x in zip(X, y):\n",
-    "            self.N[y_x] += Counter(x)\n",
+    "            self.N[y_x] += Counter(x) #self.N[autor] : n ngrames mes freq amb la seva freq\n",
     "        self.V = len(set(x for y_x in self.N for x in self.N[y_x]))\n",
-    "\n",
-    "        \n",
+    "                     \n",
+    "  \n",
     "    def prior(self, y):\n",
     "        \"\"\"Donada una etiqueta y, retorna p(y), \n",
     "        segons la informació que tenim a self.C\n",
@@ -379,8 +451,7 @@
     "        Returns:\n",
     "            p(y), float entre 0 i 1\n",
     "        \"\"\"\n",
-    "        \n",
-    "        raise NotImplementedError()\n",
+    "        return self.C[y]/sum(self.C.values())\n",
     "\n",
     "        \n",
     "    def probability(self, x, y):\n",
@@ -393,8 +464,11 @@
     "        Returns:\n",
     "            p(x|y), float entre 0 i 1\n",
     "        \"\"\"\n",
+    "        A = self.N[y][x]\n",
+    "        B = self.C[y]\n",
+    "        M = len(self.C.keys())\n",
     "\n",
-    "        raise NotImplementedError()\n",
+    "        return (A+1)/(B+M)\n",
     "        \n",
     "        \n",
     "    def predict(self, x):\n",
@@ -406,20 +480,30 @@
     "        Returns:\n",
     "            L'etiqueta predita per x, d'acord amb la fórmula del Naive Bayes\n",
     "        \"\"\"\n",
+    "        max_prob = float('-inf')\n",
+    "        max_author = \"\"\n",
+    "        for author in self.C.keys():\n",
+    "            prob = log(self.prior(author))\n",
+    "            for ngram in x:\n",
+    "                prob += log(self.probability(ngram, author))\n",
+    "                \n",
+    "            if (prob > max_prob):\n",
+    "                max_prob = prob\n",
+    "                max_author = author\n",
     "        \n",
-    "        raise NotImplementedError()"
+    "        return max_author    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "7e4c11fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "N = 10\n",
-    "train_X, train_y = create_features(glob('data/gutenberg/training/*.txt'), N=N, ngram_range=(1,1))\n",
-    "test_X, test_y = create_features(glob('data/gutenberg/testing/*.txt'), N=N, ngram_range=(1,1))\n",
+    "train_X, train_y = create_features(glob('data/gutenberg/training/*.txt'), N=N, ngram_range=(2,3))\n",
+    "test_X, test_y = create_features(glob('data/gutenberg/testing/*.txt'), N=N, ngram_range=(2,3))\n",
     "\n",
     "bayes = NaiveBayes()\n",
     "bayes.fit(train_X, train_y)"
@@ -427,10 +511,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "868bc32a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chesterton chesterton\n",
+      "whitman milton\n",
+      "shakespeare shakespeare\n"
+     ]
+    }
+   ],
    "source": [
     "predictions = []\n",
     "for x, y in zip(test_X, test_y):\n",
@@ -459,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "8cbc09bb",
    "metadata": {},
    "outputs": [],
@@ -474,16 +568,28 @@
     "    Returns:\n",
     "        accuracy(pred_labels)\n",
     "    \"\"\"\n",
+    "    count = 0\n",
     "    \n",
-    "    raise NotImplementedError()"
+    "    for i in range(len(pred_labels)):\n",
+    "        if (pred_labels[i] == true_labels[i]): count +=1\n",
+    "            \n",
+    "    return count /len(pred_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "357eb3e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6666666666666666\n"
+     ]
+    }
+   ],
    "source": [
     "print(accuracy(predictions, test_y))"
    ]
@@ -502,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "b1a8002f",
    "metadata": {},
    "outputs": [],
@@ -534,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "e8c0485f",
    "metadata": {},
    "outputs": [],
@@ -568,10 +674,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "e7a84722",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.03333333333333333\n"
+     ]
+    }
+   ],
    "source": [
     "print(n_fold(X, y))"
    ]
@@ -586,21 +700,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "id": "d16dcf44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7166666666666667\n"
+     ]
+    }
+   ],
    "source": [
-    "raise NotImplementedError()"
+    "X, y = create_features(glob('data/gutenberg/**/*.txt'), N=10, ngram_range=(3,5))\n",
+    "print(n_fold(X, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "ea305599",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "X, y = create_features(glob('data/gutenberg/**/*.txt'), N=20, ngram_range=(3,5))\n",
+    "print(n_fold(X, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "92986828",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "X, y = create_features(glob('data/gutenberg/**/*.txt'), N=30, ngram_range=(3,5))\n",
+    "print(n_fold(X, y))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a26e703",
+   "id": "0e267f2b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X, y = create_features(glob('data/gutenberg/**/*.txt'), N=40, ngram_range=(3,5))\n",
+    "print(n_fold(X, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "034d9266",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y = create_features(glob('data/gutenberg/**/*.txt'), N=10, ngram_range=(3,5))\n",
+    "print(n_fold(X, y))"
+   ]
   }
  ],
  "metadata": {
